# wordly-tui

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-and-release.yml  release.yml
src/: game.cpp  resources.cpp
src/TerminalUI/: renderer.cpp  renderer.h  terminal.cpp  terminal.h
src/TerminalUI/components/: row_component.cpp  row_component.h
src/TerminalUI/renderers/rowRenderer/: row_renderer.hpp
src/TerminalUI/renderers/rowRenderer/components/: list_component.hpp
src/resources/: English.db
